# bambam

./: .gitignore  EG_test_mep_util.rs  LICENSE.md  README.md  pyproject.toml  run.sh  setup.sh
rust/: Cargo.toml
rust/bambam/: Cargo.toml  README.md
rust/bambam-core/src/model/state/: multimodal_mapping.rs  multimodal_state_ops.rs
rust/bambam-core/src/util/: date_deserialization_ops.rs  geo_utils.rs
rust/bambam-gbfs/: Cargo.toml  README.md
rust/bambam-gbfs/src/: main.rs
rust/bambam-gbfs/src/app/: gbfs_cli.rs  mod.rs
rust/bambam-gbfs/src/app/download/: mod.rs  run.rs
rust/bambam-gbfs/src/model/: mod.rs
rust/bambam-gtfs/: Cargo.toml  README.md
rust/bambam-gtfs-flex/: Cargo.toml  README.md
rust/bambam-gtfs-flex/src/: flex_processor.rs  locations.rs  main.rs  stop_times.rs
rust/bambam-gtfs-flex/src/model/: feature.rs
rust/bambam-gtfs-flex/src/model/frontier/: model.rs  service.rs
rust/bambam-gtfs-flex/src/model/traversal/: mod.rs
rust/bambam-gtfs-flex/src/util/: mod.rs
rust/bambam-gtfs-flex/src/util/zone/: error.rs  graph.rs  lookup.rs  lookup_config.rs  mod.rs  relation.rs
rust/bambam-gtfs-flex/src/util/zone_graph/: graph.rs
rust/bambam-gtfs/src/: lib.rs
rust/bambam-gtfs/src/schedule/: bundle_ops.rs  date_mapping_policy.rs  date_mapping_policy_config.rs  date_ops.rs  distance_calculation_policy.rs  fq_ops.rs  fq_schedule_row.rs  gtfs_bundle.rs  gtfs_edge.rs  match_weekday.rs  missing_stop_matching_policy.rs  mod.rs  processed_trip.rs  provider.rs  schedule_error.rs  schedule_row.rs  sorted_trip.rs
rust/bambam-gtfs/src/schedule/app/: gtfs_app.rs  operation.rs
rust/bambam-gtfs/src/schedule/date/: date_candidate.rs  date_codec.rs  date_iterator.rs  date_mapping.rs  date_ops.rs  mod.rs
rust/bambam-gtfs/src/util/: mod.rs
rust/bambam-omf/: Cargo.toml
rust/bambam-omf/src/: lib.rs
rust/bambam-omf/src/app/: cli_bbox.rs  mod.rs  network.rs  omf_app.rs  serialize_options.rs
rust/bambam-omf/src/collection/: collector.rs  collector_config.rs  collector_ops.rs  error.rs  mod.rs  object_source.rs
rust/bambam-omf/src/collection/filter/: bbox.rs  bbox_row_predicate.rs  mod.rs  row_filter_config.rs  row_group_filter.rs  taxonomy_filter_predicate.rs  travel_mode_filter.rs
rust/bambam-omf/src/collection/record/: building.rs  common.rs  during_expression.rs  geometry_wkb_codec.rs  mod.rs  overture_record.rs  place.rs  record_type.rs  transportation_collection.rs  transportation_connector.rs  transportation_segment.rs
rust/bambam-omf/src/collection/taxonomy/: category_tree.rs  taxonomy_model.rs
rust/bambam-omf/src/graph/: component_algorithm.rs  connector_in_segment.rs  mod.rs  omf_graph.rs  segment_ops.rs  segment_split.rs  serialize_ops.rs  summary.rs  vertex_serializable.rs
rust/bambam-omf/src/util/: bambam-config-omf.toml  fs.rs
rust/bambam-osm/: Cargo.toml
rust/bambam-osm/src/: lib.rs  main.rs
rust/bambam-osm/src/algorithm/: buffer.rs  connected_components.rs  mod.rs  search.rs
rust/bambam-osm/src/algorithm/clustering/: clustered_geometry.rs  clustering_rtree.rs  mod.rs
rust/bambam-osm/src/algorithm/consolidation/: consolidation_ops.rs  mod.rs  way_consolidation.rs
rust/bambam-osm/src/algorithm/simplification/: mod.rs  simplified_path.rs  simplified_way.rs  simplify_ops.rs
rust/bambam-osm/src/algorithm/truncation/: component_filter.rs  component_truncation.rs  geo_truncation.rs  mod.rs
rust/bambam-osm/src/app/: bambam_configuration.rs  mod.rs
rust/bambam-osm/src/app/wci/: mod.rs  way_attributes_for_wci.rs  way_geometry_and_data.rs  wci_ops.rs
rust/bambam-osm/src/config/: mod.rs  osm.rs
rust/bambam-osm/src/model/: mod.rs  osm_cli_error.rs
rust/bambam-osm/src/model/feature/: highway.rs  mod.rs
rust/bambam-osm/src/model/osm/: import_ops.rs  mod.rs  osm_error.rs  osm_source.rs
rust/bambam-osm/src/resources/: test_neighborhood.pbf
rust/bambam-osm/src/test/: .gitignore  get_test.sh  schaan_liechtenstein.txt
rust/bambam-overturemaps/: Cargo.toml
rust/bambam-overturemaps/src/collection/: api.rs  collector.rs  collector_config.rs  constants.rs  error.rs  mod.rs  object_source.rs  taxonomy.rs  version.rs
rust/bambam-overturemaps/src/collection/filter/: bbox.rs  bbox_row_predicate.rs  has_class_in_row_predicate.rs  has_class_row_predicate.rs  mod.rs  non_empty_class_row_predicate.rs  row_filter.rs  row_filter_config.rs  taxonomy_filter_predicate.rs
rust/bambam-overturemaps/src/collection/record/: building.rs  buildings.rs  dataset.rs  mod.rs  overture_record.rs  place.rs  places.rs  record_type.rs
rust/bambam-overturemaps/src/collection/taxonomy/: mod.rs  taxonomy_builder.rs  taxonomy_model.rs
rust/bambam-py/: Cargo.toml
rust/bambam-py/src/: lib.rs
rust/bambam-util/: Cargo.toml
rust/bambam-util/src/gtfs/: mod.rs  provider.rs  summary.rs
rust/bambam-util/src/gtfs/app/: gtfs_app.rs  mod.rs  operation.rs
rust/bambam-util/src/resources/: 2024-08-13-mobilitydataacatalog.csv
rust/bambam/src/: lib.rs  main.rs
rust/bambam/src/app/: mod.rs  osminfostruct.rs  way_attributes_for_wci.rs  way_geometry_and_data.rs  wayinfostruct.rs  wci.rs
rust/bambam/src/app/access/: app.rs  mod.rs
rust/bambam/src/app/gtfs_config/: gtfs_config_error.rs  mod.rs  run.rs
rust/bambam/src/app/matoverlay/: app.rs  mod.rs  overlay.rs
rust/bambam/src/app/oppvec/: app.rs  category_format.rs  default.rs  geometry_format.rs  mod.rs  opportunity_record.rs  oppvec_ops.rs  overture_categories.csv  source_format.rs  source_format_config.rs
rust/bambam/src/app/overlay/: aggregation_function.rs  app.rs  grouping.rs  mep_row.rs  mod.rs  out_row.rs  overlay_operation.rs  overlay_source.rs
rust/bambam/src/model/: bambam_feature.rs  bambam_field.rs  bambam_ops.rs  bambam_state.rs  bambam_state_ops.rs  builder.rs  builders.rs  fieldname.rs  mod.rs  time_bin.rs
rust/bambam/src/model/access/: mod.rs
rust/bambam/src/model/frontier/: mod.rs
rust/bambam/src/model/input_plugin/: mod.rs
rust/bambam/src/model/label/: mod.rs  multimodal_label_model.rs  (+1 more)
rust/bambam/src/util/: date_deserialization_ops.rs  mod.rs  wci.rs
(+419 files in other folders)
