[workspace]
resolver = "2"
members = ["bambam", "bambam-osm", "bambam-gtfs", "bambam-omf"]

[workspace.dependencies]
kdam = "0.6.2"
bamcensus-core = { version = "0.1.0" }
bamcensus-acs = { version = "0.1.0" }
bamcensus = { version = "0.1.0" }
bamcensus-lehd = { version = "0.1.0" }
routee-compass = { version = "0.14.0" }
routee-compass-core = { version = "0.14.0" }
routee-compass-powertrain = { version = "0.14.0" }
uom = { version = "0.37.0", features = ["serde"]}