[workspace]
resolver = "2"
members = ["bambam", "bambam-osm", "bambam-gtfs", "bambam-omf"]

# Patch section to override any version-based dependencies with git revisions
# see [https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#working-with-an-unpublished-minor-version]
[patch.crates-io]
routee-compass-core = { git = "https://github.com/NREL/routee-compass.git", rev = "abf86b842782aba6f14b10c16d08c6f20480a8c4" }
routee-compass-powertrain = { git = "https://github.com/NREL/routee-compass.git", rev = "abf86b842782aba6f14b10c16d08c6f20480a8c4" }


[workspace.dependencies]

# nrel 
bamcensus-core = { version = "0.1.0" }
bamcensus-acs = { version = "0.1.0" }
bamcensus = { version = "0.1.0" }
bamcensus-lehd = { version = "0.1.0" }
routee-compass = { git = "https://github.com/NREL/routee-compass.git", rev = "abf86b842782aba6f14b10c16d08c6f20480a8c4" }
routee-compass-core = { git = "https://github.com/NREL/routee-compass.git", rev = "abf86b842782aba6f14b10c16d08c6f20480a8c4" }
routee-compass-powertrain = { git = "https://github.com/NREL/routee-compass.git", rev = "abf86b842782aba6f14b10c16d08c6f20480a8c4" }

# third party
arrow = { version = "55.0.0" }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
config = "0.15.11"
csv = "1.3.1"
downloader = { version = "0.2.8" }
env_logger = "0.11.3"
flate2 = "1.0"
futures = { version = "0.3.31", features = ["executor"] }
geo = { version = "0.30.0", features = ["use-serde"] }
geo-buffer = "0.2.0"
geo-traits = "0.3.0"
geo-types = "0.7.16"
geojson = { version = "0.24.1" }
geozero = { version = "0.14.0", features = ["with-wkb"] }
gtfs-structures = "0.43.0"
h3o = { version = "0.8.0", features = ["serde", "geo"] }
hex = "0.4.3"
inventory = { version = "0.3.21" }
itertools = { version = "0.14.0" }
kdam = "0.6.2"
log = "0.4.19"
num-traits = "0.2.19"
object_store = { "version" = "0.12.0", features = ["aws"] }
osmio = "0.14.0"
osmpbf = "0.3.4"
parquet = { version = "55.0.0", features = ["snap", "async", "object_store"] }
rand = "0.9.1"
rayon = "1.10.0"
regex = { version = "1.11.1" }
reqwest = { version = "0.12.12", features = ["blocking"] }
rstar = { version = "0.12.0" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0" }
shapefile = { version = "0.7.0", features = ["geo-types"] }
skiplist = "0.5.1"
thiserror = "2.0.12"
tokio = "1.39.2"
toml = { version = "0.9.8" }
uom = { version = "0.36.0", features = ["serde"] }
wkb = "0.9.0"
wkt = { version = "0.13.0", features = ["serde"] }
zip = "5.1.1"