[package]
name = "bambam-gbfs"
version = "0.2.3"
edition = "2024"
license = "BSD-3-Clause"
description = "GBFS Extensions for The Behavior and Advanced Mobility Big Access Model"

[dependencies]
env_logger = { workspace = true }
routee-compass-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
geo = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
kdam = { workspace = true }