[package]
name = "bambam-gtfs-flex"
version = "0.2.4"
edition = "2021"
license = "BSD-3-Clause"
description = "Simple GTFS-Flex scanner"
repository = "https://github.com/NREL/bambam"
readme = "README.md"

[features]
default = ["type4"]
type4 = ["dep:bambam-gtfs"]

[dependencies]
zip = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
kdam = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
geo-types = { workspace = true }
routee-compass-core = { workspace = true }
bambam-gtfs = { version = "0.2.3", path = "../bambam-gtfs", optional = true }
# No external dependencies needed for the simple version
