[package]
name = "bambam-gtfs"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NREL/bambam-gtfs"
documentation = "https://docs.rs/bambam-gtfs"
description = "GTFS Command Line Utilities for The Behavior and Advanced Mobility Big Access Model"
keywords = [
    "nrel",
    "access-model",
    "accessibility",
    "routing",
    "reachability",
    "transit",
    "multimodal",
    "routee",
]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]

log = "0.4.19"
itertools = { version = "0.14.0" }
chrono = { version = "0.4.41", features = ["serde"] }
skiplist = "0.5.1"
zip = "2.1.3"
# rusqlite = { version = "0.32.1", features = ["bundled"] }

env_logger = "0.11.3"
config = "0.15.11"
thiserror = "2.0.12"
kdam = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }

serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0" }
csv = { version = "1.2.2" }
flate2 = "1.0"

rstar = { version = "0.12.0" }
geo = { version = "0.30.0", features = ["use-serde"] }
wkt = { version = "0.13.0", features = ["serde"] }
wkb = "0.7.1"
geojson = { version = "0.24.1" }
# shapefile = "0.6.0"

h3o = { version = "0.6.4", features = ["serde", "geo"] }
gtfs-structures = "0.43.0"

rayon = "1.10.0"
tokio = "1.39.2"
downloader = { version = "0.2.8" }
