[package]
name = "bambam-omf"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NREL/bambam"
documentation = "https://docs.rs/bambam-omf"
description = "OvertureMaps Foundation support for The Behavior and Advanced Mobility Big Access Model"
keywords = [
    "nrel",
    "access-model",
    "accessibility",
    "multimodal",
    "transit",
]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]
bamcensus-core = { workspace = true }
bamcensus-acs = { workspace = true }
bamcensus-lehd = { workspace = true }
bamcensus = { workspace = true }
routee-compass = { workspace = true }
routee-compass-core = { workspace = true }
routee-compass-powertrain = { workspace = true }

arrow = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
