[package]
name="bambam-overturemaps"
version="0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
bamsoda-core = { workspace = true }
bamsoda-acs = { workspace = true }
bamsoda-lehd = { workspace = true }
bamsoda-app = { workspace = true }
routee-compass = { workspace = true }
routee-compass-core = { workspace = true }
routee-compass-powertrain = { workspace = true }
compass-tomtom = { workspace = true }

chrono = { version = "0.4", features =["serde"] }
log = "0.4.19"
geo = { version = "0.30.0", features = ["use-serde"] }
arrow = {version="55.0.0"}
parquet = { version = "55.0.0", features = ["snap", "async", "object_store"] }
object_store = { "version" = "0.12.0", features = ["aws"]}
geozero = { version="0.14.0", features = ["with-wkb"] }
hex = "0.4.3"

serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "*", features = ["derive"] }
futures = {version = "0.3.31", features = ["executor"]}
thiserror = "2.0.12"
reqwest = { version = "0.12.12", features = ["blocking"] }
csv = "1.3.1"
rayon = "1.10.0"
