[package]
name = "bambam"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NREL/bambam"
documentation = "https://docs.rs/bambam"
description = "The Behavior and Advanced Mobility Big Access Model"
keywords = [
    "nrel",
    "access-model",
    "accessibility",
    "routing",
    "reachability",
    "transit",
    "multimodal",
    "routee",
]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]
bamcensus-core = { workspace = true }
bamcensus-acs = { workspace = true }
bamcensus-lehd = { workspace = true }
bamcensus = { workspace = true }
routee-compass = { workspace = true }
routee-compass-core = { workspace = true }
routee-compass-powertrain = { workspace = true }
bambam-osm = { version = "0.1.0", path = "../bambam-osm" }
bambam-omf = { version = "0.1.0", path = "../bambam-omf" }

uom = { workspace = true }
inventory = { version = "0.3.21" }
log = "0.4.19"
itertools = { version = "0.14.0" }
chrono = { version = "0.4.31", features = ["serde"] }
skiplist = "0.5.1"
zip = "2.1.3"
# rusqlite = { version = "0.32.1", features = ["bundled"] }

env_logger = "0.11.3"
config = "0.15.11"
thiserror = "2.0.12"
kdam = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }

serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0" }
csv = { version = "1.2.2" }
flate2 = "1.0"

rstar = { version = "0.12.0" }
geo = { version = "0.30.0", features = ["use-serde"] }
geo-traits = "0.3.0"
geo-types = "0.7.16"
wkt = { version = "0.14.0", features = ["serde"] }
wkb = "0.9.0"
hex = "0.4.3"
geojson = { version = "0.24.1" }
rand = "0.9.1"
shapefile = { version = "0.7.0", features = ["geo-types"] }

h3o = { version = "0.8.0", features = ["serde", "geo"] }
gtfs-structures = "0.43.0"

rayon = "1.10.0"
tokio = "1.44.2"

