[package]
name = "bambam"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
repository = "https://github.com/NREL/bambam"
documentation = "https://docs.rs/bambam"
description = "The Behavior and Advanced Mobility Big Access Model"
keywords = [
    "nrel",
    "access-model",
    "accessibility",
    "multimodal",
    "transit",
]
categories = ["command-line-utilities", "science", "science::geo"]

[dependencies]
bamcensus-core = { workspace = true }
bamcensus-acs = { workspace = true }
bamcensus-lehd = { workspace = true }
bamcensus = { workspace = true }
routee-compass = { workspace = true }
routee-compass-core = { workspace = true }
routee-compass-powertrain = { workspace = true }
bambam-osm = { version = "0.1.0", path = "../bambam-osm" }
bambam-omf = { version = "0.1.0", path = "../bambam-omf" }

uom = { workspace = true}
inventory = { workspace = true}
log = { workspace = true }
itertools = { workspace = true}
chrono = { workspace = true}
skiplist = { workspace = true }
zip = { workspace = true }
# rusqlite = { workspace = true}

env_logger = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
kdam = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }

serde = { workspace = true}
serde_json = { workspace = true}
csv = { workspace = true}
flate2 = { workspace = true }
toml = { workspace = true }

rstar = { workspace = true}
geo = { workspace = true}
geo-traits = { workspace = true }
geo-types = { workspace = true }
wkt = { workspace = true}
wkb = { workspace = true }
hex = { workspace = true }
geojson = { workspace = true}
rand = { workspace = true }
shapefile = { workspace = true}

h3o = { workspace = true}
gtfs-structures = { workspace = true }

rayon = { workspace = true }
tokio = { workspace = true }
